[guidance] Changed VS project configuration

--- a/examples/guidance_test/guidance_test.vcxproj
+++ b/examples/guidance_test/guidance_test.vcxproj
@@ -91,14 +91,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\src\localizer\simple_road_map.cpp" />
-    <ClCompile Include="..\..\src\map_manager\map_manager.cpp" />
-    <ClCompile Include="guidance.cpp" />
+    <ClCompile Include="..\..\src\guidance\guidance.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\src\map_manager\map_manager.hpp" />
-    <ClInclude Include="guidance.hpp" />
+    <ClInclude Include="..\..\src\guidance\guidance.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
