[dg_test] add guidance module

--- a/examples/dg_test/dg_test.vcxproj
+++ b/examples/dg_test/dg_test.vcxproj
@@ -91,6 +91,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\src\guidance\guidance.cpp" />
     <ClCompile Include="..\..\src\localizer\simple_road_map.cpp" />
     <ClCompile Include="..\..\src\map_manager\map_manager.cpp" />
     <ClCompile Include="main.cpp" />
