--- a/examples/dg_test/dg_test.vcxproj.filters
+++ b/examples/dg_test/dg_test.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="..\..\src\map_manager\map_manager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\guidance\guidance.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
