--- a/examples/unit_test/unit_test.vcxproj.filters
+++ b/examples/unit_test/unit_test.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="..\..\src\localizer\simple_road_map.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\localizer\utm_converter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\core\basic_type.hpp">
