[VPS] test code, minor modification

--- a/examples/vps_test/vps_test.vcxproj.filters
+++ b/examples/vps_test/vps_test.vcxproj.filters
@@ -24,4 +24,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\src\vps\vps.py">
+      <Filter>Header Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
