--- a/examples/vps_test/vps_test.vcxproj
+++ b/examples/vps_test/vps_test.vcxproj
@@ -96,6 +96,9 @@
   <ItemGroup>
     <ClInclude Include="..\..\src\vps\vps.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\src\vps\vps.py" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
