--- a/examples/unit_test/unit_test.vcxproj
+++ b/examples/unit_test/unit_test.vcxproj
@@ -105,7 +105,8 @@
     <ClInclude Include="..\..\src\localizer\simple_localizer.hpp" />
     <ClInclude Include="..\..\src\localizer\simple_road_map.hpp" />
     <ClInclude Include="test_core_graph.hpp" />
-    <ClInclude Include="test_core_map.hpp" />
+    <ClInclude Include="test_core_type.hpp" />
+    <ClInclude Include="test_localizer_example.hpp" />
     <ClInclude Include="test_localizer_gps2utm.hpp" />
     <ClInclude Include="test_localizer_road.hpp" />
     <ClInclude Include="test_localizer_simple.hpp" />
