--- a/examples/road_recog_test/CMakeLists.txt
+++ b/examples/road_recog_test/CMakeLists.txt
@@ -3,7 +3,6 @@ cmake_minimum_required(VERSION 2.8)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 set(BINDIR	"${CMAKE_SOURCE_DIR}/../../bin")
-set(AUTHOR_NAME	"jaeyeong.lee")
 
 get_filename_component(ProjectId ${CMAKE_CURRENT_LIST_DIR} NAME)
 string(REPLACE " " "_" ProjectId ${ProjectId})
@@ -15,9 +14,9 @@ find_package( OpenCV 4.0 REQUIRED )
 
 INCLUDE_DIRECTORIES ( ${CMAKE_SOURCE_DIR}/../../src ${PYTHON_INCLUDE_DIRS} )
 
-file(GLOB SOURCES ${CMAKE_SOURCE_DIR}/../../src/*.cpp ${CMAKE_SOURCE_DIR}/../../src/core/*.cpp ${CMAKE_SOURCE_DIR}/../../src/road_recog/*.cpp *.cpp)
+file(GLOB SOURCES core/*.cpp road_recog/*.cpp *.cpp)
  
 add_executable(${PROJECT_NAME} ${SOURCES}  )
-target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS} ${PYTHON_LIBRARIES} -ldl -lutil)
+target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS} ${PYTHON_LIBRARIES} )
 
 install(TARGETS ${PROJECT_NAME} DESTINATION ${BINDIR})
