[general] use python_embedding.hpp

--- a/examples/road_recog_test/road_recog_test.vcxproj
+++ b/examples/road_recog_test/road_recog_test.vcxproj
@@ -94,6 +94,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\src\dg_python.hpp" />
     <ClInclude Include="..\..\src\road_recog\road_direction_recognizer.hpp" />
   </ItemGroup>
   <ItemGroup>
