--- a/examples/road_recog_test/road_recog_test.vcxproj.filters
+++ b/examples/road_recog_test/road_recog_test.vcxproj.filters
@@ -23,6 +23,9 @@
     <ClInclude Include="..\..\src\road_recog\road_direction_recognizer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\dg_python.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\src\road_recog\road_direction_recognizer.py">
