[General] update CMakeLists.txt

--- a/examples/code_browser/CMakeLists.txt
+++ b/examples/code_browser/CMakeLists.txt
@@ -1,19 +1,23 @@
-cmake_minimum_required(VERSION 2.6)
+cmake_minimum_required(VERSION 2.8)
 
 set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 set(BINDIR	"${CMAKE_SOURCE_DIR}/../../bin")
-set(AUTHOR_NAME	"jaeyeong.lee")
+set(SRCDIR	"${CMAKE_SOURCE_DIR}/../../src")
 
-get_filename_com ponent(ProjectId ${CMAKE_CURRENT_LIST_DIR} NAME)
+get_filename_component(ProjectId ${CMAKE_CURRENT_LIST_DIR} NAME)
 string(REPLACE " " "_" ProjectId ${ProjectId})
 project(${ProjectId} C CXX)
-find_package( OpenCV REQUIRED )
 
-INCLUDE_DIRECTORIES ( ${CMAKE_SOURCE_DIR}/../../src )
+find_package( PythonInterp 3.6 REQUIRED )
+find_package( PythonLibs 3.6 REQUIRED )
+find_package( OpenCV 4.0 REQUIRED )
 
-file(GLOB SOURCES ${CMAKE_SOURCE_DIR}/../../src/*.cpp ${CMAKE_SOURCE_DIR}/../../src/core/*.cpp *.cpp)
+INCLUDE_DIRECTORIES ( ${SRCDIR} ${PYTHON_INCLUDE_DIRS} )
+
+file(GLOB SOURCES ${SRCDIR}/core/*.cpp ${SRCDIR}/exploration/*.cpp ${SRCDIR}/guidance/*.cpp ${SRCDIR}/localizer/*.cpp ${SRCDIR}/map_manager/*.cpp ${SRCDIR}/poi_recog/*.cpp ${SRCDIR}/road_recog/*.cpp ${SRCDIR}/vps/*.cpp *.cpp)
  
-add_executable(${PROJECT_NAME} ${SOURCES}  )
-target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS} )
+add_executable( ${PROJECT_NAME} ${SOURCES} )
+target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS} ${PYTHON_LIBRARIES} )
 
-install(TARGETS ${PROJECT_NAME} DESTINATION ${BINDIR})
+install( TARGETS ${PROJECT_NAME} DESTINATION ${BINDIR} )
