--- a/examples/guidance_test/guidance_test.vcxproj.filters
+++ b/examples/guidance_test/guidance_test.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="..\..\src\guidance\guidance.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\map_manager\map_manager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\guidance\guidance.hpp">
