--- a/examples/unit_test/unit_test.vcxproj
+++ b/examples/unit_test/unit_test.vcxproj
@@ -92,18 +92,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\EXTERNAL\qgroundcontrol\UTM.cpp" />
-    <ClCompile Include="..\..\src\localizer\simple_road_map.cpp" />
+    <ClCompile Include="..\..\src\localizer\road_map.cpp" />
     <ClCompile Include="..\..\src\localizer\utm_converter.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\core\basic_type.hpp" />
-    <ClInclude Include="..\..\src\core\directed_graph.hpp" />
-    <ClInclude Include="..\..\src\core\graph_painter.hpp" />
     <ClInclude Include="..\..\src\core\map.hpp" />
+    <ClInclude Include="..\..\src\localizer\directed_graph.hpp" />
+    <ClInclude Include="..\..\src\localizer\graph_painter.hpp" />
     <ClInclude Include="..\..\src\localizer\localizer.hpp" />
+    <ClInclude Include="..\..\src\localizer\road_map.hpp" />
     <ClInclude Include="..\..\src\localizer\simple_localizer.hpp" />
-    <ClInclude Include="..\..\src\localizer\simple_road_map.hpp" />
     <ClInclude Include="test_core_graph.hpp" />
     <ClInclude Include="test_core_type.hpp" />
     <ClInclude Include="test_localizer_example.hpp" />
