--- a/examples/unit_test/unit_test.vcxproj
+++ b/examples/unit_test/unit_test.vcxproj
@@ -104,10 +104,10 @@
     <ClInclude Include="..\..\src\localizer\localizer.hpp" />
     <ClInclude Include="..\..\src\localizer\road_map.hpp" />
     <ClInclude Include="..\..\src\localizer\simple_localizer.hpp" />
-    <ClInclude Include="test_core_graph.hpp" />
     <ClInclude Include="test_core_type.hpp" />
     <ClInclude Include="test_localizer_example.hpp" />
     <ClInclude Include="test_localizer_gps2utm.hpp" />
+    <ClInclude Include="test_localizer_graph.hpp" />
     <ClInclude Include="test_localizer_road.hpp" />
     <ClInclude Include="test_localizer_simple.hpp" />
   </ItemGroup>
