[MapManager] 1. Modify 'generatePath(…)' according to 'PathElement{}' 2. Modify test codes(“test_map_manager.hpp”) 3. Modify “test_simple_path.json” according to real data structure

--- a/examples/map_manager_test/map_manager_test.vcxproj.filters
+++ b/examples/map_manager_test/map_manager_test.vcxproj.filters
@@ -21,6 +21,12 @@
     <ClCompile Include="..\..\src\map_manager\map_manager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\EXTERNAL\qgroundcontrol\UTM.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\localizer\utm_converter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="test_map_manager.hpp">
