--- a/examples/code_browser/code_browser.vcxproj
+++ b/examples/code_browser/code_browser.vcxproj
@@ -92,42 +92,52 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\guidance\guidance.cpp" />
-    <ClCompile Include="..\..\src\localizer\simple_road_map.cpp" />
+    <ClCompile Include="..\..\src\localizer\road_map.cpp" />
+    <ClCompile Include="..\..\src\localizer\utm_converter.cpp" />
     <ClCompile Include="..\..\src\map_manager\map_manager.cpp" />
     <ClCompile Include="..\..\src\poi_recog\poi_recognizer.cpp" />
     <ClCompile Include="..\dg_test\main.cpp" />
+    <ClCompile Include="..\dg_test_ros\src\dg_test.cpp" />
     <ClCompile Include="..\guidance_test\Guidance.cpp" />
     <ClCompile Include="..\guidance_test\main.cpp" />
     <ClCompile Include="..\map_manager_test\main.cpp" />
+    <ClCompile Include="..\poi_recog_test\main.cpp" />
     <ClCompile Include="..\proj_template\main.cpp" />
+    <ClCompile Include="..\python_test\main.cpp" />
     <ClCompile Include="..\road_recog_test\main.cpp" />
     <ClCompile Include="..\unit_test\main.cpp" />
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="..\vps_test\main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\core\basic_type.hpp" />
-    <ClInclude Include="..\..\src\core\directed_graph.hpp" />
-    <ClInclude Include="..\..\src\core\graph_painter.hpp" />
     <ClInclude Include="..\..\src\core\map.hpp" />
     <ClInclude Include="..\..\src\core\path.hpp" />
     <ClInclude Include="..\..\src\dg_core.hpp" />
+    <ClInclude Include="..\..\src\dg_guidance.hpp" />
     <ClInclude Include="..\..\src\dg_localizer.hpp" />
     <ClInclude Include="..\..\src\dg_map_manager.hpp" />
     <ClInclude Include="..\..\src\dg_poi_recog.hpp" />
     <ClInclude Include="..\..\src\dg_road_recog.hpp" />
     <ClInclude Include="..\..\src\dg_vps.hpp" />
     <ClInclude Include="..\..\src\guidance\guidance.hpp" />
+    <ClInclude Include="..\..\src\localizer\directed_graph.hpp" />
+    <ClInclude Include="..\..\src\localizer\graph_painter.hpp" />
     <ClInclude Include="..\..\src\localizer\localizer.hpp" />
+    <ClInclude Include="..\..\src\localizer\road_map.hpp" />
     <ClInclude Include="..\..\src\localizer\simple_localizer.hpp" />
-    <ClInclude Include="..\..\src\localizer\simple_road_map.hpp" />
+    <ClInclude Include="..\..\src\localizer\utm_converter.hpp" />
     <ClInclude Include="..\..\src\map_manager\map_manager.hpp" />
     <ClInclude Include="..\..\src\opencx.hpp" />
+    <ClInclude Include="..\..\src\opensx.hpp" />
     <ClInclude Include="..\..\src\poi_recog\poi_recognizer.hpp" />
+    <ClInclude Include="..\..\src\python_embedding.hpp" />
     <ClInclude Include="..\..\src\road_recog\road_direction_recognizer.hpp" />
     <ClInclude Include="..\..\src\vps\vps.hpp" />
+    <ClInclude Include="..\..\src\vvs.h" />
     <ClInclude Include="..\guidance_test\Guidance.hpp" />
     <ClInclude Include="..\guidance_test\simple_map_manager_jsh.h" />
     <ClInclude Include="..\map_manager_test\test_map_manager.hpp" />
+    <ClInclude Include="..\python_test\python_test.hpp" />
     <ClInclude Include="..\unit_test\test_core_graph.hpp" />
     <ClInclude Include="..\unit_test\test_core_type.hpp" />
     <ClInclude Include="..\unit_test\test_localizer_example.hpp" />
@@ -146,11 +156,19 @@
     <None Include="..\..\src\road_recog\main.py" />
     <None Include="..\..\src\road_recog\road_direction_recognizer.py" />
     <None Include="..\..\src\vps\vps.py" />
+    <None Include="..\python_test\python_test.py" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\dg_test\CMakeLists.txt" />
+    <Text Include="..\dg_test_ros\CMakeLists.txt" />
+    <Text Include="..\poi_recog_test\CMakeLists.txt" />
+    <Text Include="..\python_test\CMakeLists.txt" />
     <Text Include="..\road_recog_test\CMakeLists.txt" />
     <Text Include="..\unit_test\CMakeLists.txt" />
+    <Text Include="..\vps_test\CMakeLists.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="..\dg_test_ros\package.xml" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
