[General] support to run python as thread

--- a/examples/dg_test/dg_test.vcxproj.filters
+++ b/examples/dg_test/dg_test.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClCompile Include="..\..\src\guidance\guidance.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\utils\python_embedding.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
