--- a/examples/dg_test/dg_test.vcxproj
+++ b/examples/dg_test/dg_test.vcxproj
@@ -96,6 +96,7 @@
     <ClCompile Include="..\..\src\localizer\road_map.cpp" />
     <ClCompile Include="..\..\src\localizer\utm_converter.cpp" />
     <ClCompile Include="..\..\src\map_manager\map_manager.cpp" />
+    <ClCompile Include="..\..\src\utils\python_embedding.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
