--- a/examples/dg_test/CMakeLists.txt
+++ b/examples/dg_test/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 set(BINDIR	"${CMAKE_SOURCE_DIR}/../../bin")
 set(SRCDIR	"${CMAKE_SOURCE_DIR}/../../src")
@@ -18,6 +18,8 @@ find_package( OpenCV 4.0 REQUIRED )
 find_package( CURL REQUIRED ) 
 
 INCLUDE_DIRECTORIES ( ${SRCDIR} ${RAPIDJSON_INC} ${PYTHON_INCLUDE_DIRS} )
+
+add_definitions(-DDG_TEST_SIMPLE)
 
 file(GLOB SOURCES ${SRCDIR}/core/*.cpp ${SRCDIR}/exploration/*.cpp ${SRCDIR}/guidance/*.cpp ${SRCDIR}/localizer/*.cpp ${SRCDIR}/map_manager/*.cpp ${SRCDIR}/poi_recog/*.cpp ${SRCDIR}/road_recog/*.cpp ${SRCDIR}/vps/*.cpp ${SRCDIR}/utils/*.cpp ${EXTDIR}/qgroundcontrol/*.cpp *.cpp)
  
