--- a/examples/dg_test_ros/package.xml
+++ b/examples/dg_test_ros/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
-    <name>dg_test</name>
+    <name>dg_ros</name>
     <version>0.0.0</version>
-    <description>The dg_test package</description>
+    <description>The dg_ros package</description>
 
     <!-- One maintainer tag required, multiple allowed, one person per tag -->
     <!-- Example:  -->
     <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-    <maintainer email="dg@todo.todo">dg</maintainer>
+    <maintainer email="jylee@etri.re.kr">jaeyeong.lee</maintainer>
 
 
     <!-- One license tag required, multiple allowed, one license per tag -->
