[General] Fix the project file of 'dg_test' w.r.t. the previous update

--- a/examples/dg_test/dg_test.vcxproj.filters
+++ b/examples/dg_test/dg_test.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\src\map_manager\map_manager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -34,6 +31,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\utils\python_embedding.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="dg_simple.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
