--- a/examples/dg_test/CMakeLists.txt
+++ b/examples/dg_test/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 2.8)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DDG_TEST_SIMPLE")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVPSSERVER")
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVPSSERVER")
 set(BINDIR	"${CMAKE_SOURCE_DIR}/../../bin")
 set(SRCDIR	"${CMAKE_SOURCE_DIR}/../../src")
 set(EXTDIR	"${CMAKE_SOURCE_DIR}/../../EXTERNAL")
