[Localizer] Consider 'TopometricPose::head' in 'SimpleLocalizer' and visualization

--- a/examples/localizer_test/localizer_test.vcxproj.filters
+++ b/examples/localizer_test/localizer_test.vcxproj.filters
@@ -35,7 +35,7 @@
     <ClInclude Include="..\..\src\core\map.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\localizer\simple_localizer.hpp">
+    <ClInclude Include="..\..\src\localizer\localizer_simple.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="test_localizer_graph.hpp">
