[Localizer] Try many variants

--- a/examples/localizer_eval/localizer_eval.vcxproj.filters
+++ b/examples/localizer_eval/localizer_eval.vcxproj.filters
@@ -56,5 +56,8 @@
     <ClInclude Include="..\..\src\localizer\localizer_base.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\localizer\localizer_ekf_variants.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
